Updating pom for maven central

--- a/pom.xml
+++ b/pom.xml
@@ -1,33 +1,121 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.github.fernandospr</groupId>
-  <artifactId>javapns-jdk16</artifactId>
-  <packaging>jar</packaging>
-  <version>2.2.1-SNAPSHOT</version>
-  <name>javapns-jdk16</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+	<modelVersion>4.0.0</modelVersion>
+  	<groupId>com.github.fernandospr</groupId>
+  	<artifactId>javapns-jdk16</artifactId>
+  	<packaging>jar</packaging>
+  	<version>2.2.1</version>
+  	<name>javapns-jdk16</name>
+  	<description>Library to send notifications using APNS</description>
+  	<url>https://github.com/fernandospr/javapns-jdk16</url>
+	<licenses>
+		<license>
+			<name>GNU LGPL license v3.0</name>
+			<url>http://opensource.org/licenses/lgpl-3.0.html</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	
+	<!-- Inherit the Sonatype OSS deployment configuration -->
+	<parent>
+		<groupId>org.sonatype.oss</groupId>
+		<artifactId>oss-parent</artifactId>
+		<version>7</version>
+	</parent>
+
+	<scm>
+		<connection>scm:git:git@github.com:fernandospr/javapns-jdk16.git</connection>
+		<url>scm:git:git@github.com:fernandospr/javapns-jdk16.git</url>
+		<developerConnection>scm:git:git@github.com:fernandospr/javapns-jdk16.git</developerConnection>
+	</scm>
+	<developers>
+		<developer>
+			<id>fernandospr</id>
+			<name>Fernando Sproviero</name>
+		</developer>
+	</developers>
+	
+  	<dependencies>
+    	<dependency>
+	      	<groupId>junit</groupId>
+    	  	<artifactId>junit</artifactId>
+	      	<version>3.8.1</version>
+      		<scope>test</scope>
+    	</dependency>
     
-    <!-- logging -->
-    <dependency>
-        <groupId>log4j</groupId>
-        <artifactId>log4j</artifactId>
-        <version>1.2.12</version>
-    </dependency>
-    
-    <!-- crypto -->
-    <dependency>
-        <groupId>org.bouncycastle</groupId>
-        <artifactId>bcprov-jdk16</artifactId>
-        <version>1.46</version>
-    </dependency>
-    
-  </dependencies>
+		<!-- logging -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.12</version>
+		</dependency>
+	
+		<!-- crypto -->
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk16</artifactId>
+			<version>1.46</version>
+		</dependency>
+	</dependencies>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.4</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.2.1</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9</version>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
