--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   	<groupId>com.github.fernandospr</groupId>
   	<artifactId>javapns-jdk16</artifactId>
   	<packaging>jar</packaging>
-  	<version>2.2.1</version>
+  	<version>2.2.1-SNAPSHOT</version>
   	<name>javapns-jdk16</name>
   	<description>Library to send notifications using APNS</description>
   	<url>https://github.com/fernandospr/javapns-jdk16</url>
