--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   	<groupId>com.github.fernandospr</groupId>
   	<artifactId>javapns-jdk16</artifactId>
   	<packaging>jar</packaging>
-  	<version>2.3.1-SNAPSHOT</version>
+  	<version>2.3.1</version>
   	<name>javapns-jdk16</name>
   	<description>Library to send notifications using APNS</description>
   	<url>https://github.com/fernandospr/javapns-jdk16</url>
@@ -100,6 +100,10 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.9</version>
+				<configuration>
+					<encoding>ISO-8859-1</encoding>
+					<additionalparam>-Xdoclint:none</additionalparam>
+				</configuration>
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
