--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   	<groupId>com.github.fernandospr</groupId>
   	<artifactId>javapns-jdk16</artifactId>
   	<packaging>jar</packaging>
-  	<version>2.3.2-SNAPSHOT</version>
+  	<version>2.4.0</version>
   	<name>javapns-jdk16</name>
   	<description>Library to send notifications using APNS</description>
   	<url>https://github.com/fernandospr/javapns-jdk16</url>
